# software

./: .gitignore  .gitmodules  LICENSE  README.md
.github/ignore/: trident-ci-workflow@v1.yaml
.github/workflows/: greetings.yml  trident-ci-workflow.yaml  trident-ci-workflow@v2.yaml
ADR/: README.md
CV_Models/: ImageRec.ipynb  readme.md
RedHerring/: README.md
RedHerring/configuration/: README.md  Read.txt  odroid-vnc-setup.sh  package-setup.sh  setup.sh  vncserver
RedHerring/functional_tests/: emulator.py  functional_tests.py  roslauncher.py  template_launch_file.launch
RedHerring/ros/: env.sh
RedHerring/ros/launchfiles/: auv.launch  gui.launch  rov.launch  test.launch
RedHerring/ros/src/auv_controls/: CMakeLists.txt  package.xml
RedHerring/ros/src/auv_controls/src/: ai.cpp
RedHerring/ros/src/motor_controller/: CMakeLists.txt  package.xml
RedHerring/ros/src/motor_controller/launchfiles/: client.launch  motors.launch  movement.launch
RedHerring/ros/src/motor_controller/msg/: keyboard.msg
RedHerring/ros/src/motor_controller/src/: client.cpp  controller.cpp  movement.cpp
RedHerring/ros/src/motor_controller/srv/: motor_command.srv  movement_command.srv
RedHerring/ros/src/redherring_gazebo/: CMakeLists.txt  package.xml
RedHerring/ros/src/redherring_gazebo/launchfiles/: gas_station.launch  open_world.launch
RedHerring/ros/src/redherring_gazebo/urdf/: red_herring.urdf.xacro
RedHerring/ros/src/redherring_gazebo/worlds/: gas_station.world
RedHerring/ros/src/rov_controls/: CMakeLists.txt  package.xml
RedHerring/ros/src/rov_controls/launchfiles/: joystick_node.launch  keyboard.launch
RedHerring/ros/src/rov_controls/src/: joystick_node.cpp  keyboard_node.1.cpp  keyboard_node.cpp
RedHerring/ros/src/system_manager/: CMakeLists.txt  package.xml
RedHerring/ros/src/system_manager/launchfiles/: device_manager.launch
RedHerring/ros/src/system_manager/src/: device_manager.cpp
RedHerring/ros/src/system_manager/srv/: device_manager.srv
Simulation/: Overview.md
Simulation/model_sub/: model.config  model.sdf
URDF_model/: test_robot.gv
configuration/: noetic_setup.sh
configuration/debug_CAN/: send_one_message.sh
cv_demo/: .gitignore  edge_v2.py  notes.txt
cv_demo/cv_demo_spin/: edge.py  edge_v2.py  spin_stream.py  test_cam.py  yolo_opencv.py
cv_demo/cv_demo_web/: edge_v2.py  yolo_opencv.py
polaris/: README.md
polaris/ADR/: vision_node_python_refactor.md
polaris/configuration/: setup.sh
polaris/ros/: .gitignore  README.md  auv.launch  docker_make.sh  docker_run.sh  docker_shell.sh  local.launch
polaris/ros/src/: Doxyfile  (+1 more)
polaris/ros/src/vision/: CMakeLists.txt
polaris/ros/src/vision/cascades/: GateCascade.xml
polaris/ros/src/vision/include/: BuoyDetector.hpp  CameraInput.hpp  DerivedDetector.hpp  Detector.hpp  Distance.hpp  EnableDetector.hpp  Filter.hpp  GateDetector.hpp  PathDetector.hpp
polaris/ros/src/vision/launchfiles/: vision.launch  vision_node.launch
polaris/ros/src/vision/src/: BuoyDetector.cpp  CameraInput.cpp  DerivedDetector.cpp  Distance.cpp  Filter.cpp  GateDetector.cpp  PathDetector.cpp  vision_node.cpp
polaris/ros/src/vision/srv/: change_detection.srv
trident/: .travis.yaml  README.md  system.launch
trident/backup/peripherals/: CMakeLists.txt  package.xml
trident/backup/peripherals/include/: peripheral_manager.hpp
trident/backup/peripherals/launch/: periph.launch
trident/backup/peripherals/src/: powerboard_node.cpp
trident/launch/: comm.launch  network_layer_test.launch
trident/src/auvic_msgs/: CMakeLists.txt  README.md  package.xml
trident/src/auvic_msgs/msg/: Monitor_Jetson_To_World.msg  devices_MC_motorEnums.msg  protocol_MCMessageRequest_S.msg  protocol_MID_E.msg  protocol_PBBattCurrents_S.msg  protocol_PBBattVoltages_S.msg  protocol_PBEnvData_S.msg  protocol_PBMessageRequest_S.msg  protocol_allMessages_U.msg  protocol_deviceName_S.msg  protocol_motorRPM_S.msg  protocol_motorSetSpeed_S.msg  protocol_powerEnable_S.msg
trident/src/auvic_msgs/srv/: Devices_Get_Data_From_Peripherals.srv  Monitor_Send_Data_To_World.srv  devices_MC_getMotorEnums.srv  devices_to_monitor.srv  out.txt
trident/src/auvic_rostesting/: CMakeLists.txt  README.md  package.xml
trident/src/auvic_rostesting/scripts/: ExampleApplicationNode.py  powerboardSimulator.py
trident/src/auvic_rostesting/src/: example_app_client.cpp
trident/src/auvic_rostesting/test/: CANBus_Receiving.test  CANBus_Sending.test
trident/src/communication/monitor/: CMakeLists.txt  package.xml
trident/src/communication/monitor/config/: devices.json  power_board.json
trident/src/communication/monitor/include/: can_manager.hpp  protocol.h
trident/src/communication/monitor/launch/: HS.launch  SH.launch  can.launch
trident/src/communication/monitor/src/: HardwareToSoftware.cpp  HardwareToSoftware_node.cpp  SoftwareToHardware.cpp  SoftwareToHardware_node.cpp  can_manager.cpp  can_manager_node.cpp  powerboard_node.cpp
trident/src/communication/monitor/srv/: GetAllDevices.srv  GetDeviceMessage.srv
trident/src/communication/monitor/test/: test_node_HS.py  test_node_HS.test  test_node_SH.cpp  test_node_SH.test
trident/src/devices/: CMakeLists.txt  README.MD  package.xml
trident/src/devices/include/: peripheral_manager.hpp  protocol.h  sailorman.hpp
trident/src/devices/launch/: periph.launch  powerboard.launch  sailor.launch
trident/src/devices/msg/: hydro_fft.msg  imu.msg
trident/src/devices/src/: data_ensemble.py  dropper.cpp  dropper_node.cpp  dvl.cpp  dvl_node.cpp  grabber.cpp  grabber_node.cpp  hydrophone.cpp  hydrophone_node.cpp  imu.cpp  imu_node.cpp  lcd_board.cpp  lcd_board_node.cpp  motorcontroller.cpp  motorcontroller_node.cpp  periodic_node.cpp  powerboard.cpp  powerboard_node.cpp  sailorman.cpp  sailorman_node.cpp  torpedo.cpp  torpedo_node.cpp
trident/src/devices/srv/: get_motor_enums.srv  hydro_data.srv  hydro_ffts.srv
trident/src/devices/test/: test_bench.hpp
tutorials/: how_to_make_a_custom_msg.md
wiki/ADR/: monitor_package_refactor.md
wiki/URDF_model/: my_robot.urdf
wiki/configuration/: README.md
(+111 files in other folders)
