<?xml version="1.0"?>
<package format="2">
  <name>auvic_rostesting</name>
  <version>0.0.0</version>
  <description>The auvic_rostesting package</description>
  <maintainer email="anijjar@uvic.ca">anijjar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>devices</build_depend>
  <build_depend>monitor</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>auvic_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_export_depend>devices</build_export_depend>
  <build_export_depend>monitor</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <exec_depend>auvic_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>devices</exec_depend>
  <exec_depend>monitor</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>


</package>
