<?xml version="1.0"?>
<package format="2">
  <name>devices</name>
  <version>0.2.0</version>
  <description>Contains data on Trident's peripherals </description>
  <maintainer email="anijjar@todo.todo">anijjar</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>auvic_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>auvic_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  
</package>
