<?xml version="1.0"?>
<package>
  <name>rov_controls</name>
  <version>0.0.0</version>
  <description>Controls for the ROV vehicle</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>motor_controller</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>motor_controller</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
