<?xml version="1.0"?>
<package>
  <name>system_manager</name>
  <version>0.0.0</version>
  <description>The system package</description>
  <maintainer email="asinha@todo.todo">asinha</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
